* bump nexus version * update download url to SSL * allow for JVM options to be overriden as environment variables * doc update